dev/hello-manifests/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-kubernetes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-kubernetes
  template:
    metadata:
      labels:
        app: hello-kubernetes
    spec:
      containers:
      - name: hello-kubernetes-basic
        image: 073045235439.dkr.ecr.us-east-1.amazonaws.com/hello-kube:1
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "80m"
          limits:
            memory: "128Mi"
            cpu: "250m"
      imagePullSecrets:
        - name: regcred
